cititechd/force-app/main/default/objects/PriceBookMappings__mdt/PriceBookMappings__mdt.object-meta.xml
<CustomObject>
    <label>PriceBookMappings</label>
    <pluralLabel>PriceBookMappings</pluralLabel>
</CustomObject>