cititechd/force-app/main/default/objects/PriceBookMappings__mdt/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>AccountId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>