cititechd/force-app/main/default/objects/PriceBookMappings__mdt/fields/BusinessLine__c.field-meta.xml
<CustomField>
    <fullName>BusinessLine__c</fullName>
    <label>BusinessLine</label>
    <length>20</length>
    <type>Text</type>
</CustomField>