cititechd/force-app/main/default/objects/PriceBookMappings__mdt/fields/PriceBookId__c.field-meta.xml
<CustomField>
    <fullName>PriceBookId__c</fullName>
    <label>PriceBookId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>